keywords: 'new features, release notes, enhancements, what"s new' 
summary: NetApp offre funzionalità nuove e migliorate in ogni release dei servizi Keystone STaaS. 
---
= Novità di Keystone STaaS
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Scopri le ultime funzionalità e i miglioramenti dei servizi Keystone STaaS.



== 13 ottobre 2025

Nuovi miglioramenti nella dashboard Keystone nella NetApp Console:



=== Colonna di override della policy QoS nella scheda Risorse

La scheda *Volumi nei cluster* all'interno della scheda *Risorse* ora include una colonna *Override policy QoS* che indica se le regole QoS vengono ignorate per i volumi di backup e mirror, visualizzando *true* (regole ignorate), *false* (regole applicate) o *N/D* (per i volumi mirror).


NOTE: Per gli abbonamenti Keystone v3, questa colonna visualizza *N/D* poiché i criteri QoS non sono applicabili nell'offerta v3.



=== Visibilità degli avvisi migliorata nella pagina Panoramica

La pagina *Panoramica* ora include due nuove sezioni di avviso denominate *Avvisi non risolti per gravità* e *Avvisi Keystone non risolti più vecchi*. Per saperne di più, fare riferimento alink:https://docs.netapp.com/us-en/keystone-staas/integrations/keystone-console.html["Dashboard Keystone nella console NetApp"] .



== 06 ottobre 2025



=== BlueXP è ora NetApp Console

NetApp Console, basata sulle fondamenta BlueXP migliorate e ristrutturate, offre una gestione centralizzata dello storage NetApp e dei NetApp Data Services in ambienti on-premise e cloud di livello aziendale, offrendo informazioni in tempo reale, flussi di lavoro più rapidi e un'amministrazione semplificata, il tutto in modo altamente sicuro e conforme.

Per i dettagli su cosa è cambiato, vederelink:https://docs.netapp.com/us-en/bluexp-relnotes/index.html["Note sulla versione della console NetApp"^] .



== 22 settembre 2025



=== Aggiunta del monitoraggio degli avvisi
