@@ -2228,12 +2228,10 @@ Ecco un esempio:</block>
   <block id="0189c782e04bc566597908eddaee3dd5" category="section-title">Visualizza i monitor di avviso</block>
   <block id="d8d1f09f12d3047d0b1d5264e0fbb3d4" category="paragraph">Per visualizzare i monitor di avviso, seguire questi passaggi:</block>
   <block id="8891b6740bffe77b967f8fe0f2bb0320" category="inline-image-macro">Uno screenshot dei monitor di avviso per gli abbonamenti Keystone</block>
-  <block id="ae75ac6ecba83cd82e353c5c2dddf9ca" category="paragraph">È possibile visualizzare un elenco dei monitor di avviso per tutti gli abbonamenti Keystone , inclusi i nomi dei monitor, le condizioni di avviso che attivano le notifiche, i livelli di gravità, i numeri di abbonamento, i livelli di servizio delle prestazioni e lo stato.  È possibile controllare la colonna *Creato da* per determinare se i monitor di avviso sono generati dal sistema o definiti dall'utente.</block>
   <block id="6b29e04f1a3d7126b32fea3e35336be6" category="section-title">Creare e gestire monitor di avviso</block>
   <block id="c52ec421c31615867815fd4658197c12" category="paragraph">Dalla scheda *Monitoraggio avvisi* è possibile creare monitor per monitorare l'utilizzo della capacità e la scadenza degli abbonamenti.  È inoltre possibile modificare, duplicare o eliminare i monitor esistenti, a seconda delle esigenze.</block>
   <block id="57ff1be6332a578fa82ccb64d9259d54" category="open-title">Crea un monitor</block>
   <block id="64c64a9516f4ac5c0006a03c872e7317" category="paragraph">Per creare un monitor di avviso, seguire questi passaggi:</block>
-  <block id="a3513012c18df0c1a7b8764f4e9f1ff9" category="list-text">Fare clic sul pulsante *Crea monitor*.</block>
   <block id="f4743dcb07fb533885399ef1728ce857" category="paragraph">Viene visualizzata la pagina *Crea monitor avvisi*.</block>
   <block id="704b16afc2be166a3265886d6a494bb5" category="inline-image-macro">Uno screenshot della creazione di un monitor di avviso per gli abbonamenti Keystone</block>
   <block id="b2aa832e4d8d1fd7361158475afea146" category="paragraph"><block ref="b2aa832e4d8d1fd7361158475afea146" category="inline-image-macro-rx" type="image"></block></block>
@@ -2258,7 +2256,6 @@ Ecco un esempio:</block>
   <block id="37436487b6f97021df7ee2c4adbdfa45" category="list-text">Selezionare l'icona con i puntini di sospensione per il monitor che si desidera copiare.</block>
   <block id="3cf3a984f792c68d00d0ddbaa1549d75" category="list-text">Seleziona *Duplica*.</block>
   <block id="1c9486cebc61c5048cf6288719fae578" category="paragraph">Viene visualizzata la pagina *Crea monitor avvisi* con i valori dei campi esistenti già compilati.</block>
-  <block id="7a170bf7d609f40a91657be5b2c92dc3" category="list-text">Modificare i campi come richiesto e fare clic su *Crea*.</block>
   <block id="59c8147f6a6c89c779cc9c0e0d31057d" category="paragraph">Un nuovo monitor di avviso viene creato con la configurazione aggiornata e appare nell'elenco *Monitor di avviso*.</block>
   <block id="f9fcefd0027bc07ce00160c69b1e0c90" category="open-title">Elimina monitor</block>
   <block id="85fc8a3c54b846eae784ce216c74002f" category="list-text">Selezionare l'icona con i puntini di sospensione per il monitor che si desidera rimuovere.</block>
@@ -2355,7 +2352,6 @@ Ecco un esempio:</block>
   <block id="2227728e15b4a8b218a3533e278cf342" category="doc">Modifica il tuo abbonamento Keystone dalla console NetApp</block>
   <block id="84b1a13bc7964ae4f7768e4f9c3c8756" category="paragraph">È possibile modificare la capacità impegnata del proprio abbonamento Keystone per i livelli di servizio delle prestazioni associati tramite la console NetApp .</block>
   <block id="7a91109a620e891743c65eea451a0cf2" category="paragraph"><block ref="7a91109a620e891743c65eea451a0cf2" category="inline-image-macro-rx" type="image"></block></block>
-  <block id="cb873e65402011d905122364da690822" category="paragraph">È possibile visualizzare e creare monitor di avviso per gli abbonamenti Keystone dalla dashboard Keystone nella console NetApp . La dashboard visualizza sia i monitor generati dal sistema sia quelli definiti dall'utente per l'utilizzo della capacità e la scadenza dell'abbonamento. È possibile creare monitor per impostare soglie, scegliere la gravità degli avvisi e aggiungere destinatari e-mail per le notifiche. Questa funzionalità non è disponibile in Digital Advisor.</block>
   <block id="b5c32e6c2b4476154d229af70df8cf7a" category="list-text">Dal menu di navigazione a sinistra della Console, selezionare *Archiviazione &gt; Keystone &gt; Monitoraggio &gt; Monitor avvisi*.</block>
   <block id="187aba3af65d3bb1230dc8604f0acb91" category="paragraph"><block ref="187aba3af65d3bb1230dc8604f0acb91" category="inline-image-macro-rx" type="image"></block></block>
   <block id="293028e42f8edb8a2749fa8fca8130fa" category="paragraph">La dashboard Keystone nella console NetApp consente di visualizzare e gestire gli avvisi attivi nel tuo ambiente di storage Keystone . È possibile visualizzare sia gli avvisi generati dal sistema sia quelli definiti dall'utente per l'utilizzo della capacità e la scadenza dell'abbonamento. Da questa vista è possibile valutare rapidamente la gravità dell'avviso, identificare problemi di archiviazione e adottare misure correttive. Questa visualizzazione non è disponibile in Digital Advisor.</block>
@@ -2446,4 +2442,32 @@ Ecco un esempio:</block>
   <block id="b96ad4ab266c25b5492620bb2563d5d0" category="list-text">Scarica il certificato CA di firma del codice da Sectigo<block ref="7342f89b7e38eb427d641531b8da4ba6" category="inline-link-rx"></block>.</block>
   <block id="5107c2f981fc9d221af2aedb4d9c3f10" category="paragraph">Una volta convalidata l'integrità e l'autenticità del Keystone Collector OVA, è possibile visualizzare il testo<block ref="2e5f0dac7b8d485649c8f829e8ba09da" prefix=" " category="inline-code"></block> con l'editore. <block ref="4bb910ce06804868c88e19dd6ff9e83c" category="inline-image-macro-rx" type="image"></block></block>
   <block id="f4d3f733b36c05e3bcdf4287f293b20f" category="paragraph">Se il cluster è in una configurazione MetroCluster , eseguire questo comando:</block>
+  <block id="6df7635d9934b92e0bdbe5e5a544fccb" category="doc">Completa la casella di notifica della tua copertura</block>
+  <block id="8583cba6ee38a66f6e19ca7c15a5c1ed" category="inline-link-macro">Gestire le lacune di copertura per i monitor di allerta</block>
+  <block id="a60761706ec1d12934bfc1dd049da2df" category="paragraph">La scheda *Monitoraggio avvisi* nella pagina *Monitoraggio* include una casella di notifica *Completa la copertura* che appare quando ci sono lacune nella copertura.  In questa casella sono elencati gli abbonamenti per i quali mancano i monitor di capacità o scadenza e i monitor senza abbonamenti.  È possibile colmare le lacune aggiungendo abbonamenti ai monitor esistenti, creando nuovi monitor o eliminando quelli non utilizzati. Per saperne di più, fare riferimento a <block ref="1ef75ae1f09bcc7a95c6bbe07a54229c" category="inline-link-macro-rx"></block>.</block>
+  <block id="39fb73624dac610b8274b1bd6e2c1193" category="paragraph">È possibile visualizzare e creare monitor di avviso per gli abbonamenti Keystone dalla dashboard Keystone nella NetApp Console.  La dashboard mostra sia i monitor generati dal sistema sia quelli definiti dall'utente per l'utilizzo della capacità e la scadenza degli abbonamenti. È possibile creare monitor per impostare soglie, scegliere la gravità degli avvisi e aggiungere destinatari e-mail per le notifiche.  È possibile colmare le lacune nella copertura aggiungendo monitor agli abbonamenti non coperti o risolvendo i monitor non utilizzati. Questa funzionalità non è disponibile in Digital Advisor.</block>
+  <block id="60adeaffad8e127352095573a6e3157f" category="paragraph">È possibile visualizzare un elenco dei monitor di avviso per tutti gli abbonamenti Keystone , inclusi i nomi dei monitor, le condizioni di avviso che attivano le notifiche, i livelli di gravità, i numeri di abbonamento, i livelli di servizio delle prestazioni e lo stato. È possibile controllare la colonna *Creato da* per verificare se i monitor di avviso sono generati dal sistema o definiti dall'utente.</block>
+  <block id="ac092a2bcbdb5857ae37a4756db46a49" category="list-text">Selezionare il pulsante *Crea monitor*.</block>
+  <block id="cb5198d92b18cf007a9117aa50f90c3e" category="list-text">Modifica i campi necessari e clicca su *Crea*.</block>
+  <block id="2fd74b6a7fe875798408a25e1558c434" category="section-title">Gestire le lacune di copertura</block>
+  <block id="27693e14a82cbe43a67100eb4538ddd9" category="paragraph">Quando è necessario intervenire, sopra l'elenco dei monitor di avviso viene visualizzata una casella di notifica comprimibile *Completa la copertura*.  Ti aiuta a:</block>
+  <block id="15412d2b0949c1eabadcefaed9f6f8d0" category="list-text">Identificare e gestire gli abbonamenti che non dispongono di un monitoraggio dell'utilizzo della capacità o della scadenza dell'abbonamento.</block>
+  <block id="72cf9e6c56443b9eb5c5d28a0a693ac1" category="list-text">Esamina e gestisci i monitor che non sono attualmente associati ad alcun abbonamento.</block>
+  <block id="4606189d5b77f103c0e503d8048ad8f7" category="inline-image-macro">Uno screenshot delle lacune di copertura per i monitor di avviso per gli abbonamenti Keystone</block>
+  <block id="db3c34c51d992294e98f857c62b4cf47" category="paragraph"><block ref="db3c34c51d992294e98f857c62b4cf47" category="inline-image-macro-rx" type="image"></block></block>
+  <block id="6c84c1a10e1c87172a9fadb894dd8445" category="paragraph">Per risolvere gli abbonamenti senza monitor o con monitor inutilizzati, segui questi passaggi:</block>
+  <block id="ac81eda7e7da15651a4c3d6a60e8f290" category="open-title">Abbonamenti senza monitor</block>
+  <block id="f9fc4f7dade8ed75242e3918921812c2" category="list-text">Selezionare la scheda *Scadenza abbonamenti* o *Utilizzo capacità*.</block>
+  <block id="226f73c9504a7560a9a6543e7686879d" category="list-text">Nella colonna *Risolvi*, seleziona l'icona con i puntini di sospensione relativa all'abbonamento che desideri risolvere.</block>
+  <block id="4c0349a30e44fe2e3989a278d0a1f1e1" category="list-text">Scegline uno:</block>
+  <block id="55075c37621639cb4058160f8872944a" category="list-text">*Aggiungi al monitor esistente*: viene visualizzato un pop-up.  Selezionare un monitor e confermare.</block>
+  <block id="8f9840a1a3c6e0d946a2c7230f2cc4a8" category="list-text">*Crea nuovo monitor*: il sistema visualizza la pagina *Crea monitor avvisi*.  Segui i passaggi in<block ref="f5b0d13ec8e410cddd0c73aae96856f8" category="inline-link-macro-rx"></block> per creare un nuovo monitor.</block>
+  <block id="c63b72e256a63e39fd4833b7a7c43f16" category="paragraph">Dopo aver aggiunto la copertura, l'abbonamento scompare dalla scheda.</block>
+  <block id="7652a06e5287973e36402a720937090f" category="open-title">Monitor inutilizzati</block>
+  <block id="599e408ddca0ab40965afad26b9dd5ed" category="list-text">Selezionare la scheda *Non utilizzato*.</block>
+  <block id="11ea68b14110fa7cbc61ea38b5a4fcec" category="list-text">Nella colonna *Risolvi*, seleziona l'icona con i puntini di sospensione per il monitor che desideri gestire.</block>
+  <block id="41825a04a8338881f026e0e8b933fd54" category="list-text">*Modifica*: il sistema visualizza la pagina *Modifica monitor avvisi*.  Modificare i campi necessari e salvare.  Per saperne di più, fare riferimento a vedere<block ref="b047d326fc106faf3f12ef4efac0005e" category="inline-link-macro-rx"></block> .</block>
+  <block id="0cfa773235daafece9ec96fac7a4ae83" category="list-text">*Elimina*: conferma l'eliminazione per rimuovere il monitor.</block>
+  <block id="9516b8db60240fe5a0c189f3a9d20181" category="paragraph">Il monitor viene rimosso dalla scheda dopo aver aggiunto abbonamenti o averlo eliminato.</block>
+  <block id="77750efa6f5ff153acdc42067058017f" category="section-title">10 novembre 2025</block>
 </blocks>
